# BloomFilter_Analysis

./: .gitignore  README.md  bloomfilter.py  environment.yml  pyproject.toml
benchmarks/: benchmark_ops.py  experiment_compression.py  experiment_fpr.py  experiment_hash_correlation.py  experiment_hash_quality.py  experiment_hit_vs_miss.py  experiment_optimal_k.py  experiment_size.py  experiment_words.py  make_plots.py
bloomfilter/: __init__.py  bloom.py  hashing.py
datasets/: generate_dna.py  words.txt
hpc/: environment.yml  hpc_readme.md  job_benchmark.slurm  job_fpr.slurm  job_hashes.slurm  job_ops.slurm
notebooks/: demo.ipynb  tryout.ipynb
results/: benchmark_ops.csv  corr_blake2_h1_blake2_h2.csv  corr_djb2_fnv1a.csv  corr_djb2_sdbm.csv  experiment_compression.csv  experiment_fpr.csv  experiment_hit_vs_miss.csv  experiment_optimal_k.csv  experiment_size.csv  experiment_words.csv  hist_blake2_h1.csv  hist_blake2_h1_random.csv  hist_blake2_h1_words.csv  hist_blake2_h2.csv  hist_blake2_h2_random.csv  hist_blake2_h2_words.csv  hist_djb2.csv  hist_djb2_random.csv  hist_djb2_words.csv  hist_fnv1a.csv  hist_fnv1a_random.csv  hist_fnv1a_words.csv  hist_sdbm.csv  hist_sdbm_random.csv  hist_sdbm_words.csv
src/: bloom_filter.py  experiments .py
tests/: test_bloom.py  test_hashing.py
