[project]
name = "bloomfilter"
version = "0.1.0"
description = "Simple, well-commented Bloom filter"
requires-python = ">=3.10"

dependencies = [
    "bitarray>=2.9",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bloomfilter*"]
